--- a/gallery.html
+++ b/gallery.html
@@ -3,75 +3,69 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="Design.css">
     <title>Image Gallery</title>
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-inverse">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-          <a class="navbar-brand" href="#">IMAGES</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-            </ul>
-          </div>
-          </<div>
-        </nav>
+        <a class="navbar-brand" href="#">IMAGES</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <div class="container">
       <div class="jumbotron">
-        <h1>The Image Gallery</h1>
+        <h1><span class="glyphicon glyphicon-camera"></span> The Image Gallery</h1>
         <p>A bunch of beautiful images</p>
       </div>
 
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6">
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
       </div>
     </div>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   </body>
 </html>
