--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Design.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>Image Gallery</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">IMAGES</a>
+        <a class="navbar-brand" href="#"><i class="fas fa-camera-retro"></i> IMAGES</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +30,7 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h1><span class="glyphicon glyphicon-camera"></span> The Image Gallery</h1>
+        <h1><i class="fas fa-image"></i> The Image Gallery</h1>
         <p>A bunch of beautiful images</p>
       </div>
 
@@ -38,34 +39,34 @@
             <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1435771112039-1e5b2bcad966?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1442406964439-e46ab8eff7c4?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1439524970634-649c37a69e5c?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1450&h=825&fit=crop&s=bfda9916c885869b43b70738693428d9" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1444090542259-0af8fa96557e?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1434543177303-ef2cc7707e0d?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1436262513933-a0b06755c784?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1439396087961-98bc12c21176?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450" alt="" class="img-thumbnail">
         </div>
         <div class="col-lg-4 col-sm-6">
-            <img src="http://i.imgur.com/qK42fUu.jpg" alt="" class="img-thumbnail">
+            <img src="https://images.unsplash.com/photo-1439694458393-78ecf14da7f9?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450" alt="" class="img-thumbnail">
         </div>
       </div>
     </div>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   </body>
 </html>
